@@ -17,7 +17,6 @@
     width: 34%;
     height: 100%;
     padding: 0px;
-    overflow: hidden;
 }
 
 .connectionContainer .connectionRightColumn {
