@@ -1,3 +1,4 @@
+2014-10-01 Fixed issiue with lines on Android 4.1.2 in Connection module
 2014-10-01 Fixed issues with loading Adobe Edge Animation JavaScript Runtime in Edge Animation module
 2014-10-01 Fixed problems with configuration in Paragraph module
 2014-09-30 Fixed blocked gaps issue in response to ShowAnswers event in Text module
